--- a/views/auth/private.hbs
+++ b/views/auth/private.hbs
@@ -1,2 +1,3 @@
 <h1>Private page</h1>
-<a href="/">Back to the homepage</a><br/><br/><img src="./images/cute.cat.jpg" />
+<a href="/">Back to the homepage</a><br/><br/>
+<img src="/images/cute-cat.gif" alt="test" />
