--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,8 @@
             <li id="to-left">
             <p><a href="/"> Home </a></p>
             </li>
+             <li> <a href="/main">Main page</a></li>
+             <li> <a href="/private">Private page</a></li>
             <li id="to-right">
              <form id="logout-form" action="/auth/logout" method="POST">
                <button>Logout</button>
@@ -33,11 +35,8 @@
             <li id="to-right">
             <a href="/auth/signup">Signup</a> <span> | </span>
             <a href="/auth/login">Login</a>
-            <li> <a href="/main">Cat Img</a></li>
-            <li> <a href="/private">gif</a></li>
-            <li><form id="logout-form" action="/auth/logout" method="POST">
-               <button>Logout</button>
-            </form></li>
+            <li> <a href="/main">Main page</a></li>
+           
             </li>
          </ul>
       </nav>
